Industry, academician and student demand creation viewing sections have been organized

--- a/android/app/src/main/res/layout/activity_old_request_detail.xml
+++ b/android/app/src/main/res/layout/activity_old_request_detail.xml
@@ -90,6 +90,7 @@
                         android:id="@+id/firmImage"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
+                        android:scaleType="fitXY"
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="15dp"
                         android:background="@drawable/rounded_img"
