--- a/android/app/src/main/res/navigation/nav_graph.xml
+++ b/android/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/profileFragment"
         android:name="com.example.usiapp.view.academicianView.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" >
+        tools:layout="@layout/fragment_profile">
 
     </fragment>
 
@@ -17,7 +17,16 @@
         android:id="@+id/previewFragment"
         android:name="com.example.usiapp.view.academicianView.PreviewFragment"
         android:label="fragment_preview"
-        tools:layout="@layout/fragment_preview" >
+        tools:layout="@layout/fragment_preview">
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/requestsFragment"
+        android:name="com.example.usiapp.view.academicianView.RequestsFragment"
+        android:label="requests_fragment"
+        tools:layout="@layout/fragment_requests">
+
     </fragment>
 
     <fragment
@@ -25,6 +34,7 @@
         android:name="com.example.usiapp.view.academicianView.PendingRequestAcademicianFragment"
         android:label="pending_request_academician_preview"
         tools:layout="@layout/fragment_pending_request_academician">
+
     </fragment>
 
     <fragment
@@ -32,6 +42,7 @@
         android:name="com.example.usiapp.view.academicianView.RequestAcademicianFragment"
         android:label="fragment_request_academician"
         tools:layout="@layout/fragment_request_academician">
+
     </fragment>
 
 </navigation>
