--- a/android/app/src/main/res/layout/activity_firm_info.xml
+++ b/android/app/src/main/res/layout/activity_firm_info.xml
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginVertical="10dp"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="20dp"
                 android:text="Yeni Firma Ekle"
                 android:textColor="#000000"
                 android:textSize="15sp"
@@ -99,18 +99,18 @@
                 tools:layout_editor_absoluteY="211dp" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
                 android:layout_gravity="center"
                 android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/firmWorkArea"
-                    android:layout_width="330dp"
+                    android:layout_width="317dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_marginVertical="5dp"
-                    android:layout_marginLeft="10dp"
                     android:background="@drawable/edittext_bg"
                     android:hint="Firma Çalışma Alanı"
                     android:inputType="text"
@@ -124,10 +124,9 @@
 
                 <ImageView
                     android:id="@+id/addFirmWorkArea"
-                    android:layout_width="33dp"
-                    android:layout_height="33dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginHorizontal="9dp"
                     android:contentDescription="Ekle"
                     android:src="@drawable/add_circle_black_icon" />
 
@@ -173,7 +172,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginVertical="10dp"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="20dp"
                 android:text="Eklenmiş Firmalar"
                 android:textColor="#000000"
                 android:textSize="15sp"
@@ -184,7 +183,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="400dp"
                 android:orientation="vertical">
 
