--- a/android/app/src/main/res/layout/activity_sign_up_email_student.xml
+++ b/android/app/src/main/res/layout/activity_sign_up_email_student.xml
@@ -167,6 +167,7 @@
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginVertical="5dp"
                 android:backgroundTint="#EEEEEE"
+                android:onClick="forgotPassword"
                 android:text="Şifremi Unuttum"
                 android:textColor="#000000"
                 android:textSize="15sp"
