--- a/android/app/src/main/res/layout/activity_sign_up_student.xml
+++ b/android/app/src/main/res/layout/activity_sign_up_student.xml
@@ -8,7 +8,6 @@
     android:background="#FFFFFF"
     tools:context=".view.studentView.SignUpStudentActivity">
 
-
     <!-- Scrollview -->
     <ScrollView
         android:id="@+id/scrollView"
@@ -217,6 +216,7 @@
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginVertical="5dp"
                 android:backgroundTint="#EEEEEE"
+                android:onClick="forgotPassword"
                 android:text="Şifremi Unuttum"
                 android:textColor="#000000"
                 android:textSize="15sp"
