--- a/android/app/src/main/res/layout/fragment_pending_request_academician.xml
+++ b/android/app/src/main/res/layout/fragment_pending_request_academician.xml
@@ -2,38 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:background="#FFFFFF"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context=".view.academicianView.PendingRequestAcademicianFragment">
-
-    <!-- Header -->
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="7dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@android:color/transparent"
-        app:strokeWidth="0dp">
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="Bekleyen Talepler"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-
-    </com.google.android.material.card.MaterialCardView>
+    tools:context=".view.academicianView.PendingRequestDetailActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragmentPendingReqAcadRecyclerView"
@@ -43,11 +16,10 @@
         android:overScrollMode="never"
         android:paddingTop="12dp"
         android:paddingBottom="72dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_request_card" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
