--- a/android/app/src/main/res/layout/fragment_request_academician.xml
+++ b/android/app/src/main/res/layout/fragment_request_academician.xml
@@ -2,37 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/requestAcademicianFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     tools:context=".view.academicianView.RequestAcademicianFragment">
-
-    <!-- Header -->
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@android:color/transparent"
-        app:strokeWidth="0dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="Taleplerim"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            android:textStyle="bold" />
-    </com.google.android.material.card.MaterialCardView>
 
     <!-- Kaydırılabilir içerik -->
     <androidx.recyclerview.widget.RecyclerView
@@ -46,13 +19,13 @@
         app:layout_constraintBottom_toTopOf="@id/createAcademicianRequest"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/materialCardView"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_request_card" />
 
     <!-- Yeni Talep Butonu -->
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/createAcademicianRequest"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="52dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
