--- a/android/app/src/main/res/layout/fragment_student_profile.xml
+++ b/android/app/src/main/res/layout/fragment_student_profile.xml
@@ -34,7 +34,7 @@
                 android:gravity="center"
                 android:text="Hesabım"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -89,7 +89,7 @@
                     android:background="@drawable/rounded_img"
                     android:clipToOutline="true"
                     android:contentDescription="Profil Fotoğrafı"
-                    android:scaleType="fitXY"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/person" />
 
                 <ImageView
