--- a/android/app/src/main/res/layout/item_open_request.xml
+++ b/android/app/src/main/res/layout/item_open_request.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     android:elevation="0dp"
     android:layout_marginBottom="1dp"
-    app:cardBackgroundColor="#FFFFFF"
-    app:cardCornerRadius="0dp">
+    app:cardBackgroundColor="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,10 +19,11 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
+            <!-- Sol resim -->
             <ImageView
-                android:id="@+id/requestImage2"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:id="@+id/openRequestImage"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginEnd="10dp"
                 android:adjustViewBounds="true"
                 android:background="@drawable/rounded_img"
@@ -35,17 +35,18 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_weight="2"
+                android:orientation="horizontal">
 
                 <!-- Talep başlığı -->
                 <TextView
-                    android:id="@+id/titleRequest"
+                    android:id="@+id/openRequestTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:maxLines="1"
                     android:singleLine="true"
+                    android:layout_weight="1"
+                    android:maxLines="1"
                     android:text="Talep Başlığı"
                     android:textColor="#000000"
                     android:textSize="16sp"
@@ -53,76 +54,68 @@
 
                 <!-- Talep tipi -->
                 <TextView
-                    android:id="@+id/requesterTypeTxt2"
+                    android:id="@+id/openRequesterTypeTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:background="@drawable/rounded_bg_person"
                     android:clipToOutline="true"
                     android:ellipsize="end"
+                    android:singleLine="true"
                     android:maxLines="1"
                     android:paddingHorizontal="8dp"
                     android:paddingVertical="2dp"
-                    android:singleLine="true"
                     android:text="Talep Tipi"
-                    android:textColor="#FFFFFF"
-                    android:textSize="11sp" />
+                    android:textColor="#666666"
+                    android:textSize="13sp" />
             </LinearLayout>
-
-            <ImageView
-                android:id="@+id/iconDetail"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/forward_icon" />
         </LinearLayout>
 
         <!-- Talep açıklaması -->
         <TextView
-            android:id="@+id/messageRequest"
+            android:id="@+id/openRequestMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="9dp"
             android:ellipsize="end"
-            android:maxLines="2"
             android:scrollHorizontally="false"
             android:singleLine="false"
-            android:text="Talep açıklaması"
+            android:text="Talep açıklaması buraya gelecek..."
             android:textColor="#666666"
-            android:textSize="14sp" />
+            android:textSize="15sp" />
 
         <!-- Talep oluşturulma tarihi -->
         <TextView
-            android:id="@+id/dateRequest"
+            android:id="@+id/openRequestDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="9dp"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="22.07.2025"
+            android:text="Date"
             android:textColor="#666666"
             android:textSize="13sp" />
 
-        <!-- KATEGORİLER -->
-        <HorizontalScrollView
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
-            android:overScrollMode="never"
-            android:scrollbars="none">
+            android:orientation="horizontal"
+            android:layout_marginTop="9dp">
 
-            <LinearLayout
-                android:id="@+id/containerCategory"
+            <ImageView
+                android:layout_width="17dp"
+                android:layout_height="17dp"
+                android:layout_marginEnd="7dp"
+                android:src="@drawable/apply_icon"/>
+
+            <TextView
+                android:id="@+id/applyCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingEnd="16dp" />
-        </HorizontalScrollView>
+                android:textSize="13sp"
+                android:textColor="#000000"
+                android:text="0 Adet Başvuru"/>
 
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
-
-
-
