Open requests for students and industrialists added

--- a/android/app/src/main/res/menu/bottom_nav_menu_student.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu_student.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/openRequestsFragment"
+        android:icon="@drawable/open_request_icon"/>
+
+    <item
         android:id="@+id/fragmentCreateRequestStudent"
         android:icon="@drawable/add_icon" />
 
